[metadata]
name = server-py
version = 0.0.1
author = Sean Ippolito
author_email = ippolitosean@gmail.com
description = python rate limiter
classifiers =
    Framework :: Flask
    Programming Language :: Python :: 3

[options]
package_dir=
    =src
packages = find:
python_requires = >=3.12
install_requires =
    flask
    requests
    blinker
    certifi
    charset-normalizer
    click
    colorama
    dnspython
    idna
    itsdangerous
    Jinja2
    MarkupSafe
    pymongo
    requests
    urllib3
    Werkzeug

[options.packages.find]
where=src
include=server-py*
exclude =
    examples*
    tools*
    docs*
    server-py.tests*